Will subject change to gh-pages

--- a/about.html
+++ b/about.html
@@ -13,7 +13,6 @@
 
 <body>
 
-  <!-- <body style="background:silver"> -->
   <nav class="navbar navbar-custom">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -51,29 +50,69 @@
 <div class="aboutimg">
   <div class="row">
     <div class="page-header">
-      <h1 class="text-center" >About Us</h1>
-    </div>
-    <div class="col-md-8 col-md-offset-2" >
-      <p class="lead m-col">
+      <h1 class="text-center"  >About Us</h1>
+      <div class="abtpadding">
+        <p class="fontabout">   Our team consists of four developers, each skilled with different skills incorporated to create the final out put,<a href="https://en.wikipedia.org/wiki/Milky_Way"> THE EMS LOCATOR </a></p>
+      </div>
+      <div class="col-md-8 col-md-offset-2" >
+        <p class="lead m-col">
 
-      </p><br>
-      <h1>    <img src="Aboutimg/Pavel.png" alt="Pavel">  <img src="Aboutimg/Jesse.png" alt="Jesse">  </h1>
-      <h1> <img src="Aboutimg/Lewis.png" alt="Lewis"> <img src="Aboutimg/Earnest.png" alt="Earnest"> </h1>
+        </p><br>
+      </div>
+
+      <div class="container-fluid">
+        <hr>
+        <ul>
+          <li>
+
+          </li>
+            <li>
+
+          </li>
+        </ul>
+
+      </div>
+      <div class="row" class="fontabout">
+      <h1 id="tnl" class="text-info">TEAM AND LEADERSHIP</h1>
+        <div class="col-md-3" class="text-center">
+           <img src="Aboutimg/Pavel.png" class="image-fluid" alt="Pavel"> <figcaption> <a href="https://en.wikipedia.org/wiki/Milky_Way">Mutebi Pavel,<strong>Head Developer</strong></a> </figcaption>
+        </div>
+        <div class="col-md-3" class="text-center">
+            <img src="Aboutimg/Jesse.png" class="image-fluid" alt="Jesse"><figcaption> <a href="https://en.wikipedia.org/wiki/Milky_Way">Jessy Ndavi,<strong>General-Layout Designer</strong></a> </figcaption>
+        </div>
+        <div class="col-md-3" class="text-center">
+            <img src="Aboutimg/Lewis.png" class="image-fluid"  alt="Lewis"><figcaption> <a href="https://en.wikipedia.org/wiki/Milky_Way">Ratemo Lewis,  <strong>Co-Developer</strong></a> </figcaption>
+        </div>
+        <div class="col-md-3" class="text-center">
+           <img src="Aboutimg/Earnest.png" class="image-fluid"  alt="Earnest"><figcaption><a href="https://en.wikipedia.org/wiki/Milky_Way">Earnest Gatuma,<strong>Web-Designer</strong></a></figcaption>
+        </div>
+
+
+
+
+
+      </div>
+      <h1>
+
+      <h1> </h1>
     </div>
      </div>
 
 
 </div>
 
- <div class="container-fluid">
+
+  <!-- <body style="background:silver"> -->
+
+ <div class="container-fluid" id="abtfooter">
      <hr>
 
-        <ul class="nav navbar-nav nav-center">
-          <li><a href="#">Home</a></li>
+        <ul class="nav navbar-nav nav-center"
+          <li><a href="index.html">Home</a></li>
           <li><a href="#">Location</a></li>
-          <li><a href="#">About Us</a></li>
+          <li><a href="#">About Us</a></li><br>
+          <li><a href="#">Contacts:<p>Email us via: ems254@gmail.com<</a></li>
         </ul>
 
-
-   </div>
+    </div>
   </body>
