--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <ul class="nav navbar-nav nav-center">
           <li><a href="#">Home</a></li>
           <li><a href="#">Location</a></li>
-          <li><a href="#">About Us</a></li>
+          <li><a href="about.html">About Us</a></li>
         </ul>
 
 
